  - Fix issue with page scrolling to top when closing or pinning sidebar (lukehowell)
  - Allow the Koding integration to be configured through the API
  - Added soft wrap button to repository file/blob editor
  - Add word-wrap to issue title on issue and milestone boards (ClemMakesApps)
  - Fix todos page mobile viewport layout (ClemMakesApps)
  - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)
  - Close open merge request without source project (Katarzyna Kobierska Ula Budziszewska)
  - Fix that manual jobs would no longer block jobs in the next stage. !6604
  - Add configurable email subject suffix (Fu Xu)
  - Use a ConnectionPool for Rails.cache on Sidekiq servers
  - Replace `alias_method_chain` with `Module#prepend`
  - Enable GitLab Import/Export for non-admin users.
  - Preserve label filters when sorting !6136 (Joseph Frazier)
  - Only update issuable labels if they have been changed
  - Take filters in account in issuable counters. !6496
  - Use custom Ruby images to test builds (registry.dev.gitlab.org/gitlab/gitlab-build-images:*)
  - Append issue template to existing description !6149 (Joseph Frazier)
  - Trending projects now only show public projects and the list of projects is cached for a day
  - Revoke button in Applications Settings underlines on hover.
  - Add missing values to linter !6276 (Katarzyna Kobierska Ula Budziszewska)
  - Fix Long commit messages overflow viewport in file tree
  - Revert avoid touching file system on Build#artifacts?
  - Stop using a Redis lease when updating the project activity timestamp whenever a new event is created
  - Add broadcast messages and alerts below sub-nav
  - Better empty state for Groups view
  - Update ruby-prof to 0.16.2. !6026 (Elan Ruusamäe)
  - Fix unnecessary escaping of reserved HTML characters in milestone title. !6533
  - Add organization field to user profile
  - Fix resolved discussion display in side-by-side diff view !6575