@@ -1,4 +1,5 @@
 %ul.nav-links.event-filter.scrolling-tabs
+  = event_filter_link EventFilter.all, 'All'
   = event_filter_link EventFilter.push, 'Push events'
   = event_filter_link EventFilter.merged, 'Merge events'
   = event_filter_link EventFilter.comments, 'Comments'
